--- a/report.org
+++ b/report.org
@@ -3,12 +3,10 @@
 
 #+HTML_HEAD: <link rel="stylesheet" type="text/css" href="https://fniessen.github.io/org-html-themes/src/readtheorg_theme/css/htmlize.css"/>
 #+HTML_HEAD: <link rel="stylesheet" type="text/css" href="https://fniessen.github.io/org-html-themes/src/readtheorg_theme/css/readtheorg.css"/>
-
 #+HTML_HEAD: <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 #+HTML_HEAD: <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
 #+HTML_HEAD: <script type="text/javascript" src="https://fniessen.github.io/org-html-themes/src/lib/js/jquery.stickytableheaders.min.js"></script>
 #+HTML_HEAD: <script type="text/javascript" src="https://fniessen.github.io/org-html-themes/src/readtheorg_theme/js/readtheorg.js"></script>
-
 #+HTML_HEAD_EXTRA: <style>*{font-family: serif !important}</style>
 
 * Problem Definition
@@ -71,10 +69,10 @@ src/
 │   ├── match.cpython-38.pyc
 │   ├── record.cpython-38.pyc
 │   ├── result.cpython-38.pyc
-│   ├── scores.cpython-38.pyc
 │   ├── team.cpython-38.pyc
 │   ├── team_on_match_day.cpython-38.pyc
 │   └── tournament.cpython-38.pyc
+├── py.typed
 ├── record.py
 ├── result.py
 ├── team_on_match_day.py
@@ -91,32 +89,37 @@ src/
 #+include: "data/sequence_diagram.puml" src plantuml :file data/sequence_diagram.svg
 
 * Tests
+** Static Type-Checking
+#+begin_src bash :exports both :results scalar
+mypy main.py src
+#+end_src
+
+#+RESULTS:
+: Success: no issues found in 9 source files
+
+** ~flake8~ guidelines
+#+begin_src bash :exports both :results scalar
+flake8 .
+#+end_src
+
+#+RESULTS:
+
 ** =tests/= directory
 #+begin_src bash :exports both :results scalar
 tree tests/
 #+end_src
 
 #+RESULTS:
-#+begin_example
-tests/
-├── __init__.py
-├── __pycache__
-│   ├── __init__.cpython-38.pyc
-│   ├── test_basic.cpython-38-pytest-6.2.4.pyc
-│   ├── test_epl.cpython-38-pytest-6.2.4.pyc
-│   ├── test_example.cpython-38-pytest-6.2.4.pyc
-│   ├── test_model.cpython-38-pytest-6.2.4.pyc
-│   ├── test_premilinary.cpython-38-pytest-6.2.4.pyc
-│   ├── test_ranking.cpython-38-pytest-6.2.4.pyc
-│   └── test_record.cpython-38-pytest-6.2.4.pyc
-├── test_basic.py
-├── test_epl.py
-├── test_match
-├── test_model.py
-└── test_record.py
+: tests/
+: ├── __init__.py
+: ├── test_basic.py
+: ├── test_epl.py
+: ├── test_match.py
+: ├── test_model.py
+: └── test_record.py
+: 
+: 0 directories, 6 files
 
-1 directory, 14 files
-#+end_example
 
 ** Test Cases
 *** whether the solution with input =data/sample-input.txt= matches =data/expected-output.txt=
@@ -261,71 +264,79 @@ pytest -q -k match_results --hypothesis-show-statistics
 tests/test_match.py::test_match_results:
 
   - during reuse phase (0.00 seconds):
-    - Typical runtimes: < 1ms, ~ 42% in data generation
+    - Typical runtimes: < 1ms, ~ 41% in data generation
     - 1 passing examples, 0 failing examples, 0 invalid examples
 
   - during generate phase (0.12 seconds):
     - Typical runtimes: < 1ms, ~ 51% in data generation
     - 99 passing examples, 0 failing examples, 0 invalid examples
     - Events:
-      ,* 8.08%, A(8) vs B(4) ==> A: Result.WIN --- B: Result.LOSS
-      ,* 6.06%, A(6) vs B(16) ==> A: Result.LOSS --- B: Result.WIN
-      ,* 6.06%, A(9) vs B(4) ==> A: Result.WIN --- B: Result.LOSS
-      ,* 5.05%, A(16) vs B(16) ==> A: Result.DRAW --- B: Result.DRAW
-      ,* 4.04%, A(4) vs B(4) ==> A: Result.DRAW --- B: Result.DRAW
-      ,* 4.04%, A(7) vs B(6) ==> A: Result.WIN --- B: Result.LOSS
-      ,* 3.03%, A(11) vs B(4) ==> A: Result.WIN --- B: Result.LOSS
-      ,* 3.03%, A(13) vs B(13) ==> A: Result.DRAW --- B: Result.DRAW
-      ,* 3.03%, A(13) vs B(2) ==> A: Result.WIN --- B: Result.LOSS
-      ,* 3.03%, A(17) vs B(17) ==> A: Result.DRAW --- B: Result.DRAW
-      ,* 3.03%, A(19) vs B(7) ==> A: Result.WIN --- B: Result.LOSS
+      ,* 7.07%, A(12) vs B(6) ==> A: Result.WIN --- B: Result.LOSS
+      ,* 5.05%, A(9) vs B(9) ==> A: Result.DRAW --- B: Result.DRAW
+      ,* 4.04%, A(0) vs B(18) ==> A: Result.LOSS --- B: Result.WIN
+      ,* 4.04%, A(13) vs B(19) ==> A: Result.LOSS --- B: Result.WIN
+      ,* 4.04%, A(14) vs B(0) ==> A: Result.WIN --- B: Result.LOSS
+      ,* 4.04%, A(2) vs B(2) ==> A: Result.DRAW --- B: Result.DRAW
+      ,* 4.04%, A(9) vs B(14) ==> A: Result.LOSS --- B: Result.WIN
+      ,* 3.03%, A(10) vs B(10) ==> A: Result.DRAW --- B: Result.DRAW
+      ,* 3.03%, A(14) vs B(14) ==> A: Result.DRAW --- B: Result.DRAW
+      ,* 3.03%, A(16) vs B(15) ==> A: Result.WIN --- B: Result.LOSS
+      ,* 3.03%, A(17) vs B(7) ==> A: Result.WIN --- B: Result.LOSS
+      ,* 3.03%, A(20) vs B(8) ==> A: Result.WIN --- B: Result.LOSS
+      ,* 3.03%, A(8) vs B(11) ==> A: Result.LOSS --- B: Result.WIN
       ,* 2.02%, A(0) vs B(0) ==> A: Result.DRAW --- B: Result.DRAW
-      ,* 2.02%, A(11) vs B(7) ==> A: Result.WIN --- B: Result.LOSS
-      ,* 2.02%, A(13) vs B(7) ==> A: Result.WIN --- B: Result.LOSS
-      ,* 2.02%, A(14) vs B(4) ==> A: Result.WIN --- B: Result.LOSS
-      ,* 2.02%, A(18) vs B(2) ==> A: Result.WIN --- B: Result.LOSS
-      ,* 2.02%, A(19) vs B(19) ==> A: Result.DRAW --- B: Result.DRAW
-      ,* 2.02%, A(19) vs B(6) ==> A: Result.WIN --- B: Result.LOSS
-      ,* 2.02%, A(6) vs B(6) ==> A: Result.DRAW --- B: Result.DRAW
-      ,* 2.02%, A(7) vs B(4) ==> A: Result.WIN --- B: Result.LOSS
-      ,* 2.02%, A(9) vs B(0) ==> A: Result.WIN --- B: Result.LOSS
-      ,* 1.01%, A(0) vs B(13) ==> A: Result.LOSS --- B: Result.WIN
+      ,* 2.02%, A(13) vs B(8) ==> A: Result.WIN --- B: Result.LOSS
+      ,* 2.02%, A(15) vs B(12) ==> A: Result.WIN --- B: Result.LOSS
+      ,* 2.02%, A(16) vs B(16) ==> A: Result.DRAW --- B: Result.DRAW
+      ,* 2.02%, A(2) vs B(18) ==> A: Result.LOSS --- B: Result.WIN
+      ,* 2.02%, A(2) vs B(5) ==> A: Result.LOSS --- B: Result.WIN
+      ,* 2.02%, A(20) vs B(0) ==> A: Result.WIN --- B: Result.LOSS
+      ,* 2.02%, A(3) vs B(15) ==> A: Result.LOSS --- B: Result.WIN
+      ,* 2.02%, A(7) vs B(16) ==> A: Result.LOSS --- B: Result.WIN
+      ,* 2.02%, A(7) vs B(7) ==> A: Result.DRAW --- B: Result.DRAW
+      ,* 2.02%, A(7) vs B(8) ==> A: Result.LOSS --- B: Result.WIN
+      ,* 2.02%, A(8) vs B(19) ==> A: Result.LOSS --- B: Result.WIN
+      ,* 1.01%, A(0) vs B(1) ==> A: Result.LOSS --- B: Result.WIN
       ,* 1.01%, A(0) vs B(6) ==> A: Result.LOSS --- B: Result.WIN
-      ,* 1.01%, A(1) vs B(2) ==> A: Result.LOSS --- B: Result.WIN
-      ,* 1.01%, A(10) vs B(18) ==> A: Result.LOSS --- B: Result.WIN
-      ,* 1.01%, A(14) vs B(0) ==> A: Result.WIN --- B: Result.LOSS
-      ,* 1.01%, A(14) vs B(10) ==> A: Result.WIN --- B: Result.LOSS
-      ,* 1.01%, A(14) vs B(20) ==> A: Result.LOSS --- B: Result.WIN
-      ,* 1.01%, A(14) vs B(5) ==> A: Result.WIN --- B: Result.LOSS
-      ,* 1.01%, A(15) vs B(10) ==> A: Result.WIN --- B: Result.LOSS
-      ,* 1.01%, A(17) vs B(0) ==> A: Result.WIN --- B: Result.LOSS
-      ,* 1.01%, A(17) vs B(6) ==> A: Result.WIN --- B: Result.LOSS
-      ,* 1.01%, A(18) vs B(10) ==> A: Result.WIN --- B: Result.LOSS
-      ,* 1.01%, A(18) vs B(6) ==> A: Result.WIN --- B: Result.LOSS
-      ,* 1.01%, A(18) vs B(7) ==> A: Result.WIN --- B: Result.LOSS
-      ,* 1.01%, A(19) vs B(10) ==> A: Result.WIN --- B: Result.LOSS
-      ,* 1.01%, A(19) vs B(16) ==> A: Result.WIN --- B: Result.LOSS
-      ,* 1.01%, A(19) vs B(5) ==> A: Result.WIN --- B: Result.LOSS
-      ,* 1.01%, A(20) vs B(0) ==> A: Result.WIN --- B: Result.LOSS
-      ,* 1.01%, A(20) vs B(10) ==> A: Result.WIN --- B: Result.LOSS
-      ,* 1.01%, A(20) vs B(4) ==> A: Result.WIN --- B: Result.LOSS
-      ,* 1.01%, A(3) vs B(14) ==> A: Result.LOSS --- B: Result.WIN
-      ,* 1.01%, A(4) vs B(18) ==> A: Result.LOSS --- B: Result.WIN
-      ,* 1.01%, A(5) vs B(0) ==> A: Result.WIN --- B: Result.LOSS
-      ,* 1.01%, A(5) vs B(10) ==> A: Result.LOSS --- B: Result.WIN
-      ,* 1.01%, A(5) vs B(3) ==> A: Result.WIN --- B: Result.LOSS
-      ,* 1.01%, A(6) vs B(3) ==> A: Result.WIN --- B: Result.LOSS
-      ,* 1.01%, A(7) vs B(16) ==> A: Result.LOSS --- B: Result.WIN
-      ,* 1.01%, A(8) vs B(10) ==> A: Result.LOSS --- B: Result.WIN
-      ,* 1.01%, A(9) vs B(11) ==> A: Result.LOSS --- B: Result.WIN
-      ,* 1.01%, A(9) vs B(19) ==> A: Result.LOSS --- B: Result.WIN
-      ,* 1.01%, A(9) vs B(6) ==> A: Result.WIN --- B: Result.LOSS
+      ,* 1.01%, A(1) vs B(19) ==> A: Result.LOSS --- B: Result.WIN
+      ,* 1.01%, A(10) vs B(15) ==> A: Result.LOSS --- B: Result.WIN
+      ,* 1.01%, A(10) vs B(2) ==> A: Result.WIN --- B: Result.LOSS
+      ,* 1.01%, A(12) vs B(0) ==> A: Result.WIN --- B: Result.LOSS
+      ,* 1.01%, A(12) vs B(2) ==> A: Result.WIN --- B: Result.LOSS
+      ,* 1.01%, A(12) vs B(20) ==> A: Result.LOSS --- B: Result.WIN
+      ,* 1.01%, A(13) vs B(0) ==> A: Result.WIN --- B: Result.LOSS
+      ,* 1.01%, A(13) vs B(20) ==> A: Result.LOSS --- B: Result.WIN
+      ,* 1.01%, A(13) vs B(4) ==> A: Result.WIN --- B: Result.LOSS
+      ,* 1.01%, A(14) vs B(17) ==> A: Result.LOSS --- B: Result.WIN
+      ,* 1.01%, A(15) vs B(2) ==> A: Result.WIN --- B: Result.LOSS
+      ,* 1.01%, A(16) vs B(8) ==> A: Result.WIN --- B: Result.LOSS
+      ,* 1.01%, A(17) vs B(11) ==> A: Result.WIN --- B: Result.LOSS
+      ,* 1.01%, A(18) vs B(18) ==> A: Result.DRAW --- B: Result.DRAW
+      ,* 1.01%, A(2) vs B(9) ==> A: Result.LOSS --- B: Result.WIN
+      ,* 1.01%, A(3) vs B(0) ==> A: Result.WIN --- B: Result.LOSS
+      ,* 1.01%, A(3) vs B(3) ==> A: Result.DRAW --- B: Result.DRAW
+      ,* 1.01%, A(5) vs B(4) ==> A: Result.WIN --- B: Result.LOSS
+      ,* 1.01%, A(8) vs B(0) ==> A: Result.WIN --- B: Result.LOSS
+      ,* 1.01%, A(8) vs B(7) ==> A: Result.WIN --- B: Result.LOSS
+      ,* 1.01%, A(9) vs B(4) ==> A: Result.WIN --- B: Result.LOSS
+      ,* 1.01%, A(9) vs B(7) ==> A: Result.WIN --- B: Result.LOSS
+      ,* 1.01%, A(9) vs B(8) ==> A: Result.WIN --- B: Result.LOSS
 
   - Stopped because settings.max_examples=100
 
 
-1 passed, 9 deselected in 0.15s
+1 passed, 10 deselected in 0.15s
 #+end_example
+
+*** Ranking table is idempotent
+#+begin_src bash :exports both :results scalar
+pytest -q -k epl_ranking_idempotency --hypothesis-show-statistics
+#+end_src
+
+#+RESULTS:
+: .                                                                        [100%]
+: ============================ Hypothesis Statistics =============================
+: 1 passed, 10 deselected in 0.03s
 
 *** Two teams scoring equal points should share the same rank
 #+begin_src bash :exports both :results scalar
@@ -338,30 +349,42 @@ pytest -q -k model_same_rank --hypothesis-show-statistics
 ============================ Hypothesis Statistics =============================
 tests/test_model.py::test_model_same_rank:
 
-  - during generate phase (0.18 seconds):
-    - Typical runtimes: ~ 1ms, ~ 66% in data generation
-    - 100 passing examples, 0 failing examples, 0 invalid examples
+  - during reuse phase (0.00 seconds):
+    - Typical runtimes: ~ 1ms, ~ 57% in data generation
+    - 1 passing examples, 0 failing examples, 0 invalid examples
+
+  - during generate phase (0.17 seconds):
+    - Typical runtimes: ~ 1ms, ~ 67% in data generation
+    - 99 passing examples, 0 failing examples, 0 invalid examples
     - Events:
-      ,* 7.00%, '['alpha', 'epsilon', 'iota', 'psi', 'upsilon']' have same rank(1), because they share same points (0)
-      ,* 4.00%, '['alpha', 'psi']' have same rank(3), because they share same points (115)
-      ,* 3.00%, '['alpha', 'iota']' have same rank(4), because they share same points (105)
-      ,* 3.00%, '['epsilon', 'iota', 'psi', 'upsilon']' have same rank(1), because they share same points (232)
-      ,* 2.00%, '['alpha', 'epsilon']' have same rank(4), because they share same points (51)
-      ,* 2.00%, '['alpha', 'psi']' have same rank(3), because they share same points (141)
-      ,* 2.00%, '['epsilon', 'psi']' have same rank(2), because they share same points (232)
-      ,* 2.00%, '['epsilon', 'upsilon']' have same rank(1), because they share same points (319)
-      ,* 2.00%, '['epsilon', 'upsilon']' have same rank(4), because they share same points (216)
-      ,* 1.00%, '['alpha', 'epsilon', 'upsilon']' have same rank(1), because they share same points (319)
-      ,* 1.00%, '['epsilon', 'iota', 'psi']' have same rank(2), because they share same points (176)
-      ,* 1.00%, '['epsilon', 'iota', 'psi']' have same rank(2), because they share same points (232)
-      ,* 1.00%, '['epsilon', 'psi']' have same rank(2), because they share same points (176)
-      ,* 1.00%, '['epsilon', 'upsilon']' have same rank(1), because they share same points (241)
-      ,* 1.00%, '['epsilon', 'upsilon']' have same rank(2), because they share same points (127)
+      ,* 6.06%, '['alpha', 'epsilon', 'iota', 'psi', 'upsilon']' have same rank(1), because they share same points (0)
+      ,* 5.05%, '['epsilon', 'upsilon']' have same rank(1), because they share same points (196)
+      ,* 3.03%, '['alpha', 'epsilon']' have same rank(1), because they share same points (336)
+      ,* 3.03%, '['alpha', 'epsilon']' have same rank(3), because they share same points (153)
+      ,* 3.03%, '['alpha', 'epsilon']' have same rank(3), because they share same points (270)
+      ,* 3.03%, '['epsilon', 'iota']' have same rank(2), because they share same points (193)
+      ,* 3.03%, '['epsilon', 'upsilon']' have same rank(2), because they share same points (309)
+      ,* 3.03%, '['epsilon', 'upsilon']' have same rank(2), because they share same points (317)
+      ,* 3.03%, '['iota', 'psi']' have same rank(1), because they share same points (215)
+      ,* 2.02%, '['alpha', 'iota']' have same rank(1), because they share same points (326)
+      ,* 2.02%, '['alpha', 'psi', 'upsilon']' have same rank(2), because they share same points (151)
+      ,* 2.02%, '['epsilon', 'upsilon']' have same rank(1), because they share same points (253)
+      ,* 1.01%, '['alpha', 'epsilon', 'iota']' have same rank(3), because they share same points (68)
+      ,* 1.01%, '['alpha', 'epsilon', 'psi', 'upsilon']' have same rank(2), because they share same points (151)
+      ,* 1.01%, '['alpha', 'epsilon']' have same rank(3), because they share same points (117)
+      ,* 1.01%, '['alpha', 'upsilon']' have same rank(2), because they share same points (147)
+      ,* 1.01%, '['alpha', 'upsilon']' have same rank(4), because they share same points (56)
+      ,* 1.01%, '['alpha', 'upsilon']' have same rank(4), because they share same points (92)
+      ,* 1.01%, '['epsilon', 'iota']' have same rank(4), because they share same points (68)
+      ,* 1.01%, '['epsilon', 'psi']' have same rank(1), because they share same points (348)
+      ,* 1.01%, '['epsilon', 'upsilon']' have same rank(3), because they share same points (317)
+      ,* 1.01%, '['iota', 'upsilon']' have same rank(3), because they share same points (120)
+      ,* 1.01%, '['psi', 'upsilon']' have same rank(3), because they share same points (151)
 
   - Stopped because settings.max_examples=100
 
 
-1 passed, 9 deselected in 0.22s
+1 passed, 10 deselected in 0.21s
 #+end_example
 
 *** Two teams sharing same rank should have scored equal number of points
@@ -455,71 +478,9 @@ tests/test_model.py::test_alphabetical_order:
 #+end_example
 
 *** Testing with Mock Data
-+
++ A mock fixture to check whether the results are reproducible
 
+#+begin_src bash :exports both :results scalar
+pytest -q tests/test_epl.py
+#+end_src
 
-
-* Expected
-** Thank you for your interest
-
-Your submission will be run in a clean environment
-to see if it produces the expected output. Please provide
-instructions for installing any dependencies.
-
-** What we look for
-
-We will be looking at the quality and professionalism of your work. In
-particular we look for clean, well-designed, maintainable code. Although this is
-a rather small task, it should be approached as you would an actual task for a
-customer.
-
-We would like to see some architecture, but only as much as reasonable.
-Your code shuold be easily extensible without burdensome abstractions.
-
-** When you are finished
-
-Please create a zip archive with your solution and send it to us.
-
-** The Problem
-
-We want you to create a command-line application that will calculate the
-ranking table for a sports league.
-
-** Input/output
-
-The input and output will be text. Your solution should parse the provided
-sample-input.txt file via stdin (pipe or redirect) or by parsing a file passed
-by name on the command line. Your solution should output the correct result via
-stdout to the console.
-
-The input contains results of games, one per line. See sample-input.txt for
-details. The output should be ordered from most to least points, following the
-format specified in expected-output.txt.
-
-You can expect that the input will be well-formed. There is no need to add
-special handling for malformed input files.
-
-** The rules
-
-A draw (tie) is worth 1 point and a win is worth 3 points. A
-loss is worth 0 points. If two or more teams have the same number of points,
-they should have the same rank and be printed in alphabetical order (as in the
-tie for 3rd place in the sample data).
-
-** Guidelines
-
-This should be implemented in Python 3.
-
-Your solution should be able to be run from the
-command line. Please include appropriate scripts and instructions for
-running your application and your tests.
-
-We write automated tests, and we would like you to do so as well.
-
-We appreciate well factored, object-oriented or functional designs.
-
-Please document any steps necessary to run your solution and your tests.
-
-** Platform support
-
-This will be run in a unix-ish environment (OS X).
